fix(adhere-ui-flexlayout): HorizontalFlexLayout样式修改 加入flex-wrap: nowrap;

--- a/packages/adhere-ui-flexlayout/es/index.less
+++ b/packages/adhere-ui-flexlayout/es/index.less
@@ -10,6 +10,10 @@
   &.adhere-ui-flexlayout-horizontal {
     flex-flow: row wrap;
 
+    &.adhere-ui-flexlayout-horizontal-flexLayout {
+      flex-wrap: nowrap;
+    }
+
     > .adhere-ui-flexlayout-fixed {
       // 横向的栅格系统设置
       .span(@n, @i: 0) when (@i =< @n) {
